# URSA

./: LICENSE.md  README.md
doc/: ursa_doc.tex
examples/CSP/: GolombRuler1.urs  GolombRuler2.urs  IMO1992_3.urs  Ramsey.urs  magic_square.urs  magic_square_direct.urs  queens1.urs  queens2.urs  queens3.urs  queens4.urs  send_more_money.urs
examples/Pseudorandom/: seed.urs
examples/SAT/: SAT-big.urs  SAT-small.urs  SAT1.urs  cnf1.dimacs  dimac2ursa  dimacs2ursa.cpp
examples/Simple/: fourth_degree_equation.urs  procedure.urs  system2unknowns.urs
examples/Verification/: swap.urs
src/: Makefile
src/AbstractNumbers/: Boolean.cpp  Boolean.hpp  Formula.cpp  Formula.h  FormulaFactory.cpp  FormulaFactory.h  FormulaVector.cpp  FormulaVector.h  GroundNumber.cpp  GroundNumber.hpp  Number.cpp  Number.hpp
src/Interpreter/: SymbolTable.cpp  SymbolTable.hpp  URSA_SATinterpreter.cpp  URSA_SATinterpreter.hpp
src/Parser/: ursa.h  ursa.l  ursa.tab.hpp  ursa.ypp
src/SATsolvers/: SATsolver.h
src/SATsolvers/ArgoSATsolver/: ArgoSATSolver.cpp  ArgoSATSolver.h  ResolutionClause.cpp  ResolutionClause.hpp  Solver.cpp  Solver.hpp  SolverListener.hpp  Trail.cpp  Trail.hpp
src/SATsolvers/ArgoSATsolver/strategies/: Activities.hpp  ActivityMeasure.hpp  ForgetSelectionStrategy.cpp  ForgetSelectionStrategy.hpp  ForgetSelectionStrategyClauseLength.cpp  ForgetSelectionStrategyClauseLength.hpp  ForgetSelectionStrategyMinisat.cpp  ForgetSelectionStrategyMinisat.hpp  ForgetStrategy.cpp  ForgetStrategy.hpp  ForgetStrategyFunction.cpp  ForgetStrategyFunction.hpp  ForgetStrategyMinisat.cpp  ForgetStrategyMinisat.hpp  ForgetStrategyNoForget.hpp  LiteralPolaritySelectionStrategy.cpp  LiteralPolaritySelectionStrategy.hpp  LiteralSelectionStrategy.cpp  LiteralSelectionStrategy.hpp  LiteralSelectionStrategyVariablePolarity.hpp  Makefile  Makefile.am  Makefile.in  RestartStrategy.cpp  RestartStrategy.hpp  RestartStrategyConflictCounting.cpp  RestartStrategyConflictCounting.hpp  RestartStrategyFunction.cpp  RestartStrategyFunction.hpp  RestartStrategyLuby.cpp  RestartStrategyLuby.hpp  RestartStrategyMinisat.cpp  RestartStrategyMinisat.hpp  RestartStrategyNoRestart.hpp  RestartStrategyPicosat.cpp  RestartStrategyPicosat.hpp  VariableSelectionStrategy.cpp  VariableSelectionStrategy.hpp  VariableSelectionStrategyFirstUndefined.cpp  VariableSelectionStrategyFirstUndefined.hpp  (+4 more)
src/SATsolvers/clasp_solver/: ClaspSATSolver.cpp  ClaspSATSolver.h  options.cpp  options.h
src/SATsolvers/minisat/: MiniSATSolver.cpp  MiniSATSolver.h
src/Utils/: Timer.cpp  Timer.h
(+46 files in other folders)
